@@ -38,7 +38,7 @@
 <?xml-stylesheet href="chrome://global/skin/" type="text/css"?>
 <!DOCTYPE prefwindow SYSTEM "chrome://firegpg/locale/prefwindow.dtd">
 <prefwindow xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul" 
-            title="&prefwindow.title;" onload="sizeToContent(); onLoad(this);">
+            title="&prefwindow.title;" onload="sizeToContent(); onLoad(this);" >
   <script src="misc.js"/>
   <script src="cgpglin.js"/>
   <script src="cgpgwin.js"/>
