@@ -25,3 +25,4 @@ GMailCS=Crypter et envoyer
 GMailSOK=La première signature de ce mail est de
 GMailNoS=Aucun signature n'a été trouvé dans ce mail
 GMailSErr=La première signature de ce mail est incorrect !
+GMailD=Ce mail à été décrypté !
